after a few trials, the images now work!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Bread Section -->
         <section class="hero-section">
             <div class="hero-image-wrapper">
-                <img src="images/With font.jpg" alt="Fresh round ciabatta bread" class="hero-image grain-overlay">
+                <img src="images/With-font.jpg" alt="Fresh round ciabatta bread" class="hero-image grain-overlay">
                 <div class="hero-button-overlay">
                     <a href="order.html" class="cta-button hero-cta">knead a loaf?</a>
                 </div>
@@ -27,7 +27,7 @@
         <!-- Jam Section -->
         <section class="jam-section">
             <div class="jam-images-wrapper">
-                <img src="images/jam%2002.jpg" alt="Homemade jam in jars" class="jam-image jam-image-02 grain-overlay">
+                <img src="images/jam-02.jpg" alt="Homemade jam in jars" class="jam-image jam-image-02 grain-overlay">
                 <img src="images/jam01.jpg" alt="Homemade jam in jars" class="jam-image jam-image-01 grain-overlay">
             </div>
             <div class="jam-content">
@@ -42,7 +42,7 @@
         <!-- Meet the Chef Section -->
         <section class="chef-section">
             <div class="chef-image-wrapper">
-                <img src="images/new headshot.jpg" alt="Baker portrait" class="chef-image grain-overlay">
+                <img src="images/new-headshot.jpg" alt="Baker portrait" class="chef-image grain-overlay">
             </div>
             <div class="chef-content">
                 <h2 class="section-heading">Bread has always been the center of my table.</h2>
