--- a/order.html
+++ b/order.html
@@ -23,7 +23,7 @@
             <section class="order-section">
                 <!-- Left column: Bread image with film grain -->
                 <div class="order-image-wrapper">
-                    <img src="images/jam%20and%20cream%20grain.jpg" alt="Jam and cream on bread" class="order-image grain-overlay">
+                    <img src="images/jam-and-cream-grain.jpg" alt="Jam and cream on bread" class="order-image grain-overlay">
                     <div class="film-grain"></div>
                 </div>
                 
