changed first image to be 3 poster image. Currently the home page has the title "the upper crust" with the "the" but the order page does not.

--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 </head>
 <body>
     <header class="site-header">
-        <h1 class="business-name">upper crust</h1>
+        <h1 class="business-name">the upper crust</h1>
     </header>
-    <div class="container">
-        <!-- Bread Section -->
-        <section class="hero-section">
-            <div class="hero-image-wrapper">
-                <img src="images/With-font.jpg" alt="Fresh round ciabatta bread" class="hero-image grain-overlay">
-                <div class="hero-button-overlay">
-                    <a href="order.html" class="cta-button hero-cta">knead a loaf?</a>
-                </div>
+    
+    <!-- Bread Section - Full Viewport Hero -->
+    <section class="hero-section">
+        <div class="hero-image-wrapper">
+            <img src="images/3_posters.jpg" alt="Fresh round ciabatta bread" class="hero-image grain-overlay">
+            <div class="hero-button-overlay">
+                <a href="order.html" class="cta-button hero-cta">knead a loaf?</a>
             </div>
-        </section>
+        </div>
+    </section>
+    
+    <div class="container">
 
         <!-- Jam Section -->
         <section class="jam-section">
