admin calender is there on backend, but confusing design, Unexpected token '<', "<!DOCTYPE "... is not valid JSON JSON error when trying to make an account

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>the upper crust - Breaking bread, not your schedule</title>
+    <title>Upper Crust - Breaking bread, not your schedule</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,25 +11,23 @@
 </head>
 <body>
     <header class="site-header">
-        <h1 class="business-name">the upper crust</h1>
+        <h1 class="business-name">upper crust</h1>
     </header>
-    
-    <!-- Bread Section - Full Viewport Hero -->
-    <section class="hero-section">
-        <div class="hero-image-wrapper">
-            <img src="images/3_posters.jpg" alt="Fresh round ciabatta bread" class="hero-image grain-overlay">
-            <div class="hero-button-overlay">
-                <a href="order.html" class="cta-button hero-cta">knead a loaf?</a>
-            </div>
-        </div>
-    </section>
-    
     <div class="container">
+        <!-- Bread Section -->
+        <section class="hero-section">
+            <div class="hero-image-wrapper">
+                <img src="images/With font.jpg" alt="Fresh round ciabatta bread" class="hero-image grain-overlay">
+                <div class="hero-button-overlay">
+                    <a href="order.html" class="cta-button hero-cta">knead a loaf?</a>
+                </div>
+            </div>
+        </section>
 
         <!-- Jam Section -->
         <section class="jam-section">
             <div class="jam-images-wrapper">
-                <img src="images/jam-02.jpg" alt="Homemade jam in jars" class="jam-image jam-image-02 grain-overlay">
+                <img src="images/jam%2002.jpg" alt="Homemade jam in jars" class="jam-image jam-image-02 grain-overlay">
                 <img src="images/jam01.jpg" alt="Homemade jam in jars" class="jam-image jam-image-01 grain-overlay">
             </div>
             <div class="jam-content">
@@ -44,7 +42,7 @@
         <!-- Meet the Chef Section -->
         <section class="chef-section">
             <div class="chef-image-wrapper">
-                <img src="images/new-headshot.jpg" alt="Baker portrait" class="chef-image grain-overlay">
+                <img src="images/new headshot.jpg" alt="Baker portrait" class="chef-image grain-overlay">
             </div>
             <div class="chef-content">
                 <h2 class="section-heading">Bread has always been the center of my table.</h2>
